# AI-Enhanced-Equitable-Urban-Mobility-Finance-Platform

./: .gitignore  AI_INTEGRATION.md  Cargo.toml  DEMO.md  PROJECT_STRUCTURE.md  README.md  SUBMISSION.md  index.html  package-lock.json  package.json  tailwind.config.js
contracts/equity_rate_adjuster/: Cargo.toml
contracts/equity_rate_adjuster/src/: lib.rs
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs
contracts/loan_pool/: Cargo.toml
contracts/loan_pool/src/: lib.rs  test.rs
contracts/revenue_distributor/: Cargo.toml
contracts/revenue_distributor/src/: lib.rs
scripts/: deploy.sh  test.sh
src/: App.tsx  index.css
src/components/: Dashboard.tsx  Navigation.tsx
src/contexts/: SorobanContext.tsx
