[workspace]
members = [
    "contracts/loan_pool",
    "contracts/equity_rate_adjuster", 
    "contracts/revenue_distributor",
    "contracts/governance"
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release.build-override]
opt-level = 3
debug = false
